--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/icons8-r2-d2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.cdnfonts.com/css/star-wars" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
